@@ -1,4 +1,4 @@
-$Id: History,v 1.47 1999-11-25 15:26:14 johna Exp $
+$Id: History,v 1.48 1999-11-29 15:20:29 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,10 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+vis-V00-01-11  29th November 1999  John Allison
+- Introduced helper class G4VisStateDependent to decouple G4VisManager from
+  G4StateManager, G4RunManager, etc.
 
 vis-V00-01-10  25th November 1999  John Allison
 - Adapted relevant header files of modeling and management for
